[package]
name = "highspot"
version = "0.1.0"
authors = ["Nicholas Harring <nharring@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "serde_json", "r2d2", "chrono"] }
warp = "0.2.1"
tokio = { version = "0.2", features = ["full"] }
handlebars = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_env_logger = "0.4.0"
log = "0.4"
r2d2 = "0.8.8"
bytes = "0.5.4"
chrono = {version = "0.4.0", features = ["serde"]}
metrics = "0.12.1"
quanta = "0.4.1"
metrics-runtime = "0.13.0"
futures = "0.3.4"
signal-hook = "0.1.13"
diesel_migrations = "1.4.0"
openssl = "0.10"

[profile.release]
lto = "thin"
